--- a/basic/demo-app/kubernetes/service-definition.yaml
+++ b/basic/demo-app/kubernetes/service-definition.yaml
@@ -2,6 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: demo-service
+  labels:
+    app: demo-service
+    version: v1
 spec:
   type: LoadBalancer
   ports:
